Modified the styling of the blog entries to align more with the Mobile styling for all experiences. Added a fix for letting code snippets contain scrollbars if overflows occur.

--- a/blog/rainbow-style.css
+++ b/blog/rainbow-style.css
@@ -17,6 +17,7 @@ pre {
     color: #000;
     font-size: 0.89em;
     line-height: 16px;
+    overflow: auto;
 }
 
 pre, code {
